--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -35,3 +35,28 @@ volume = {"1"},
 year = {"2023"},
 publisher = {"Electronic textbook"},
 }
+@article{stack_caching_for_interpreters,
+author = {Ertl, M. Anton},
+title = {Stack Caching for Interpreters},
+year = {1995},
+isbn = {0897916972},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/207110.207165},
+doi = {10.1145/207110.207165},
+abstract = {An interpreter can spend a significant part of its execution time on accessing arguments of virtual machine instructions. This paper explores two methods to reduce this overhead for virtual stack machines by caching top-of-stack values in (real machine) registers. The dynamic method is based on having, for every possible state of the cache, one specialized version of the whole interpreter; the execution of an instruction usually changes the state of the cache and the next instruction is executed in the version corresponding to the new state. In the static method a state machine that keeps track of the cache state is added to the compiler. Common instructions exist in specialized versions for several states, but it is not necessary to have a version of every instruction for every cache state. Stack manipulation instructions are optimized away.},
+booktitle = {Proceedings of the ACM SIGPLAN 1995 Conference on Programming Language Design and Implementation},
+pages = {315–327},
+numpages = {13},
+location = {La Jolla, California, USA},
+series = {PLDI '95}
+}
+@article{lua_implementation,
+author = {Ierusalimschy, Roberto and Figueiredo, Luiz and Celes, Waldemar},
+year = {2005},
+month = {01},
+pages = {1159-1176},
+title = {The Implementation of Lua 5.0},
+volume = {11},
+journal = {J. UCS}
+}
